# ClothSimGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  resource.rc  vcpkg-configuration.json  vcpkg.json
assets/shaders/: clothShader.frag  clothShader.vert  flagShader.frag  flagShader.vert  particleShader.frag  particleShader.vert  poleShader.frag  poleShader.vert  skyboxShader.vert
include/: camera.hpp  mesh.hpp  meshgenerator.hpp  model.hpp  particle.hpp  shaders.hpp  simulation.hpp  springs.hpp  textureloader.hpp
src/: camera.cpp  main.cpp  mesh.cpp  meshgenerator.cpp  model.cpp  particle.cpp  shaders.cpp  simulation.cpp  springs.cpp  textureloader.cpp
